--- a/3.Bases de datos/SQL.ipynb
+++ b/3.Bases de datos/SQL.ipynb
@@ -5,7 +5,7 @@
    "id": "ccf62c8d",
    "metadata": {},
    "source": [
-    "# 📊 Módulo 4: SQL\n",
+    "# 📊 Módulo: SQL\n",
     "\n",
     "![](images/db-relacional.jpg)\n",
     "\n",
@@ -1158,7 +1158,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "SELECT max(pa_id), pa_apellido,pa_nombre, COUNT(pa_id) AS NumOccurrences\n",
     "FROM bio_pacientes\n",
     "GROUP BY pa_apellido, pa_nombre\n",
@@ -1276,12 +1275,22 @@
    "id": "d23f545e",
    "metadata": {},
    "source": [
-    "\n",
     "### Subconsultas\n",
     "\n",
-    "Distribución de ordenes por cliente.\n",
-    "\n",
-    "```\n",
+    "Distribución de ordenes por cliente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb0be903",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
     "SELECT orders, count(*) as num_customers \n",
     "FROM\n",
     "(\n",
@@ -1289,43 +1298,76 @@
     "   FROM orders\n",
     "   GROUP BY 1\n",
     ") a\n",
-    "GROUP BY 1\n",
-    "```\n",
+    "GROUP BY 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "350f90e0",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Conocer el producto mas caro.\n",
     "\n",
-    "Conocer el producto mas caro.\n",
-    "\n",
-    "```\n",
     "SELECT nombre, codigo, precio\n",
     "FROM productos\n",
-    "WHERE precio=(SELET max(precio) FROM productos)\n",
-    "```\n",
-    "\n",
-    "Las subconsultas que retornan un solo valor escalar se utiliza con un operador de comparación o en lugar de una expresión\n",
-    "\n",
-    "```\n",
+    "WHERE precio=(SELET max(precio) FROM productos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6eeda432",
+   "metadata": {},
+   "source": [
+    "Las subconsultas que retornan un solo valor escalar se utiliza con un operador de comparación o en lugar de una expresión"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba6d82b8",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
     "SELECT CAMPOS\n",
     "FROM TABLA\n",
     "WHERE CAMPO OPERADOR (SUBCONSULTA)\n",
     "\n",
     "SELECT CAMPO OPERADOR (SUBCONSULTA)\n",
-    "FROM TABLA\n",
-    "```\n",
+    "FROM TABLA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0854f1d6",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Conocer el valor de un artículo determinado ('pesa') y la diferencia con el artículo mas costoso.\n",
     "\n",
-    "Conocer el valor de un artículo determinado ('pesa') y la diferencia con el artículo mas costoso.\n",
-    "\n",
-    "```\n",
     "SELECT articulo, precio,\n",
     "precio - (SELECT max(precio) FROM libros) as diferencia\n",
     "FROM productos\n",
     "WHERE articulo = 'pesa'\n",
-    "```\n",
     "\n",
-    "Actualizamos el precio del producto con el valor mayor:.\n",
+    "-- Actualizamos el precio del producto con el valor mayor:.\n",
     "\n",
-    "```\n",
     "UPDATE productos SET precio=45\n",
-    "WHERE valor = (SELECT max(valor) FROM productos)\n",
-    "```\n"
+    "WHERE valor = (SELECT max(valor) FROM productos)"
    ]
   },
   {
@@ -1360,7 +1402,6 @@
     "\n",
     "--Promedio de valor de propiedades por comuna y numero de dormitorios.\n",
     "\n",
-    "\n",
     "SELECT comuna,\n",
     "   avg(valor) FILTER (WHERE dormitorio = 1) AS \"1\",\n",
     "   avg(valor) FILTER (WHERE dormitorio = 2) AS \"2\",\n",
@@ -1368,7 +1409,6 @@
     "   avg(valor) FILTER (WHERE dormitorio = 4) AS \"4\"\n",
     "FROM propiedades\n",
     "GROUP BY comuna;\n",
-    "\n",
     "\n",
     "SELECT * FROM   \n",
     "(\n",
@@ -1421,7 +1461,6 @@
     "--En PostgreSQL se requiere habilitar la función tablefunc (`CREATE` `extension tablefunc;`) para utilizar crosstab.\n",
     "\n",
     "--Seleccionar el puntaje obtenido de cada alumno en cada examen.\n",
-    "\n",
     "\n",
     "SELECT * \n",
     "FROM crosstab(\n",
@@ -1526,66 +1565,109 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4c3dff4d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
    "source": [
-    "\n",
-    "```\n",
     "SELECT d.*\n",
     "FROM departamentos d LEFT OUTER JOIN empleados e\n",
     "ON (d.depto = e.depto)\n",
-    "WHERE e.deptno is null\n",
-    "```\n",
+    "WHERE e.deptno is null"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66c356cc",
+   "metadata": {},
+   "source": [
     "\n",
-    "Seleccionar registros de dos tablas y luego correlacionar con una tercera tabla. empleados y departamentos y bono entregado (no todos los empleados reciben bono).\n",
-    "\n",
-    "```\n",
+    "Seleccionar registros de dos tablas y luego correlacionar con una tercera tabla. empleados y departamentos y bono entregado (no todos los empleados reciben bono)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ca59675",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
     "SELECT e.ename, d.loc, eb.bono\n",
     "FROM empleados e \n",
     "JOIN departamentos d ON (e.deptno=d.deptno)\n",
     "LEFT JOIN bonos eb ON (e.empno=eb.empno)\n",
-    "ORDER BY 2\n",
-    "```\n",
+    "ORDER BY 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb72f378",
+   "metadata": {},
+   "source": [
     "\n",
-    "Seleccionar registros de dos tablas y luego correlacionar con una tercera tabla. empleados y departamentos y bono entregado (no todos los empleados reciben bono)\n",
-    "\n",
-    "```\n",
+    "Seleccionar registros de dos tablas y luego correlacionar con una tercera tabla. empleados y departamentos y bono entregado (no todos los empleados reciben bono)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8c5d7ad",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
     "SELECT e.ename, d.loc,\n",
     "    (SELECT eb.bono FROM bonos eb\n",
     "         WHERE eb.empno=e.empno) as bono\n",
     "FROM empleados e, departamentos d\n",
-    "WHERE e.deptno=d.deptno\n",
-    "```\n",
+    "WHERE e.deptno=d.deptno"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c954fd7b",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Clientes sin ordenes de compra.\n",
     "\n",
-    "Clientes sin ordenes de compra.\n",
-    "\n",
-    "```\n",
     "SELECT distinct a.cliente_id\n",
     "FROM transacciones a\n",
     "LEFT JOIN clientes b ON a.cliente_id = b.cliente_id \n",
     "WHERE b.cliente_id IS NULL\n",
-    "```\n",
     "\n",
-    "Cuantos pacientes hay de cada comuna.\n",
+    "--Cuantos pacientes hay de cada comuna.\n",
     "\n",
-    "```\n",
     "SELECT count(*) cantidad, co_id codigo, co_comuna as comuna \n",
     "FROM pacientes p\n",
     "LEFT JOIN comunas c on (p.pa_comuna = c.co_id)\n",
     "WHERE pa_comuna !='00000'\n",
     "GROUP BY co_id, pa_comuna\n",
     "ORDER BY cantidad DESC;\n",
-    "```\n",
     "\n",
-    "Cuantas consultas por usuario medico (completo).\n",
+    "--Cuantas consultas por usuario medico (completo).\n",
     "\n",
-    "```\n",
     "SELECT count(ex_idm),md_nombre||' '||md_apellido , ex_idm as medicos \n",
     "FROM consultas c \n",
     "LEFT JOIN medicos ON (ex_idm=md_id)\n",
-    "GROUP BY ex_idm, md_nombre||' '||md_apellido\n",
-    "```\n"
+    "GROUP BY ex_idm, md_nombre||' '||md_apellido"
    ]
   },
   {
@@ -1599,54 +1681,89 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a5e237b8",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
    "source": [
-    "```\n",
     "-- sentencia general\n",
+    "\n",
     "SELECT *\n",
     "FROM table_1\n",
     "INNER JOIN table_2\n",
     "ON table_1.column_name = table_2.column_name\n",
     "\n",
     "-- forma simplificada\n",
+    "\n",
     "SELECT * FROM table_1 JOIN table_2\n",
     "ON table_1.column_name = table_2.column_name\n",
-    "```\n",
     "\n",
-    "Detalles de orden y producto.\n",
-    "\n",
-    "```\n",
-    "-- \n",
+    "-- Detalles de orden y producto.\n",
     "\n",
     "SELECT a.*,b.* \n",
     "FROM ventas as a \n",
     "INNER JOIN \n",
     "productos as b \n",
-    "ON a.idproducto = b.idproducto\n",
-    "```\n",
+    "ON a.idproducto = b.idproducto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb8794c6",
+   "metadata": {},
+   "source": [
     "\n",
-    "Encontrar el total de camas (beds) por nacionalidad dentro de los registros de Airbnb, en las tablas airbnd_apartments con airbnd_hosts mediante la columna relacionada \"host_id\".\n",
-    "\n",
-    "```\n",
+    "Encontrar el total de camas (beds) por nacionalidad dentro de los registros de Airbnb, en las tablas airbnd_apartments con airbnd_hosts mediante la columna relacionada \"host_id\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c5da829",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
     "SELECT nationality, SUM(n_beds) AS total_beds_available\n",
     "FROM airbnb_hosts h\n",
     "INNER JOIN airbnb_apartments a ON h.host_id = a.host_id \n",
     "GROUP BY nationality\n",
-    "ORDER BY total_beds_available DESC;\n",
-    "```\n",
-    "\n",
-    "Esta consulta devolverá los datos de la tabla 1 cuyos campos coincidan con los de la tabla2 con una clave y los datos que no estén en la tabla 1 al compararlos con la tabla2 con una condición y una clave.\n",
-    "\n",
-    "```\n",
+    "ORDER BY total_beds_available DESC;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57423802",
+   "metadata": {},
+   "source": [
+    "Esta consulta devolverá los datos de la tabla 1 cuyos campos coincidan con los de la tabla2 con una clave y los datos que no estén en la tabla 1 al compararlos con la tabla2 con una condición y una clave."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14db1573",
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
     "select *\n",
     "from Table1 t1\n",
     "inner join Table2 t2 on t1.ID_Column = t2.ID_Column\n",
     "left join Table3 t3 on t1.ID_Column = t3.ID_Column \n",
     "where t2.column_name = column_value\n",
-    "and t3.ID_Column is null order by t1.column_name;\n",
-    "```\n"
+    "and t3.ID_Column is null order by t1.column_name;"
    ]
   },
   {
@@ -2093,7 +2210,6 @@
     "-- ejecutarlo...\n",
     "exec HolamundoProcedure\n",
     "\n",
-    "\n",
     "--Creación de un PA en SQL Server.\n",
     "--PA que toma el nombre de un autor para retornar una frase del tipo:\n",
     "-- \"Baldomero Lillo es de Chile\"\"\n",
@@ -2305,6 +2421,7 @@
     "\n",
     "\n",
     "--Idem anterior pero recibiendo una fecha.\n",
+    "\n",
     "CREATE OR REPLACE FUNCTION pgdate(date)\n",
     " RETURNS date\n",
     " LANGUAGE sql\n",
@@ -2333,6 +2450,7 @@
    "outputs": [],
    "source": [
     "--Función con dos argumentos y definición de variables.\n",
+    "\n",
     "CREATE OR REPLACE FUNCTION sumacien(integer, integer) \n",
     "RETURNS integer AS $$\n",
     "DECLARE\n",
@@ -2356,22 +2474,22 @@
     "CREATE OR REPLACE FUNCTION ejemplo_txt(integer, integer) \n",
     "RETURNS text AS $$\n",
     "DECLARE\n",
-    " A ALIAS FOR $1;\n",
-    " B ALIAS FOR $2;\n",
+    "  A ALIAS FOR $1;\n",
+    "  B ALIAS FOR $2;\n",
     "\n",
-    " constante CONSTANT integer := 100;\n",
-    " resultado INTEGER;\n",
+    "  constante CONSTANT integer := 100;\n",
+    "  resultado INTEGER;\n",
     "\n",
-    " resultado_txt TEXT DEFAULT 'El resultado final es NULO'; \n",
+    "  resultado_txt TEXT DEFAULT 'El resultado final es NULO'; \n",
     "\n",
     "BEGIN\n",
     " resultado := (A * B) + constante;\n",
     "\n",
-    " IF resultado <> 190 THEN\n",
+    "  IF resultado <> 190 THEN\n",
     "    resultado_txt :=  'El resultado es menor a 190';\n",
-    " END IF;\n",
+    "  END IF;\n",
     "\n",
-    " RETURN resultado_txt;\n",
+    "  RETURN resultado_txt;\n",
     "END;\n",
     "$$ LANGUAGE plpgsql;\n",
     "\n",
