--- a/3.Bases de datos/SQL.ipynb
+++ b/3.Bases de datos/SQL.ipynb
@@ -38,14 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "884a7505",
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (713631920.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mSELECT nombre, apellido, rut, edad, genero\u001b[39m\n           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "SELECT nombre, apellido, rut, edad, genero\n",
     "FROM clientes\n",
@@ -1552,8 +1561,9 @@
    "id": "695bd4e4",
    "metadata": {},
    "source": [
-    "\n",
     "### Uniones (JOIN)\n",
+    "\n",
+    "![SQL Joins](../images/sql-joins.jpeg)\n",
     "\n",
     "La herramienta más potente en el modelo relacional. Las sentencias JOIN permiten el uso de datos provenientes de dos o más tablas utilizando como conector entre ellas una columna cómun. Esta columna debe ser del mismo tipo de datos, y generalmente es la clave primaria de ellas (aunque no necesariamente).\n",
     "\n",
@@ -2614,7 +2624,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
