--- a/1.Fundamentos de Python/7.Numpy.ipynb
+++ b/1.Fundamentos de Python/7.Numpy.ipynb
@@ -5,7 +5,152 @@
    "id": "f2e5bd85-5598-4e5d-947d-881f3e6f788a",
    "metadata": {},
    "source": [
-    "# Numpy\n"
+    "# Numpy (Numerical Python)\n",
+    "\n",
+    "Numpy es una biblioteca de Python que se utiliza para realizar cálculos numéricos de manera eficiente. Proporciona estructuras de datos, como arreglos multidimensionales, y funciones para operar con ellos.\n",
+    "\n",
+    "Cual es la importancia de Numpy:\n",
+    "- **Eficiencia**: Numpy está optimizado para realizar operaciones matemáticas de manera rápida y eficiente.\n",
+    "- **Facilidad de uso**: Proporciona una sintaxis sencilla para trabajar con arreglos y matrices.\n",
+    "- **Compatibilidad**: Muchas otras bibliotecas de Python, como Pandas y SciPy, dependen de Numpy para sus operaciones numéricas.\n",
+    "\n",
+    "librerías que se basan en numpy:\n",
+    "- Pandas\n",
+    "- SciPy\n",
+    "- Matplotlib\n",
+    "- Scikit-learn  \n",
+    "\n",
+    "\n",
+    "## Instalación\n",
+    "Para instalar Numpy, puedes usar pip. Abre tu terminal y ejecuta el siguiente comando:\n",
+    "```bash\n",
+    "pip install numpy\n",
+    "```\n",
+    "## Importación\n",
+    "Para usar Numpy en tu código, primero debes importarlo. La convención común es importarlo como `np`:\n",
+    "```python\n",
+    "import numpy as np\n",
+    "```\n",
+    "## Creación de arreglos\n",
+    "Puedes crear arreglos de Numpy utilizando la función `np.array()`:\n",
+    "```python\n",
+    "# Crear un arreglo unidimensional\n",
+    "arr1 = np.array([1, 2, 3, 4, 5])\n",
+    "print(arr1) # Salida: [1 2 3 4 5]\n",
+    "\n",
+    "# Crear un arreglo bidimensional\n",
+    "arr2 = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(arr2) # Salida: [[1 2 3]\n",
+    "             #          [4 5 6]]\n",
+    "```\n",
+    "## Operaciones básicas\n",
+    "Numpy permite realizar operaciones matemáticas de manera eficiente:\n",
+    "```python\n",
+    "# Suma de arreglos\n",
+    "a = np.array([1, 2, 3])\n",
+    "b = np.array([4, 5, 6])\n",
+    "suma = a + b\n",
+    "print(suma) # Salida: [5 7 9]\n",
+    "\n",
+    "# Resta de arreglos\n",
+    "resta = a - b\n",
+    "print(resta) # Salida: [-3 -3 -3]\n",
+    "\n",
+    "# Multiplicación elemento a elemento\n",
+    "multiplicacion = a * b\n",
+    "print(multiplicacion) # Salida: [ 4 10 18]\n",
+    "\n",
+    "# División elemento a elemento\n",
+    "division = a / b\n",
+    "print(division) # Salida: [0.25 0.4  0.5 ]\n",
+    "\n",
+    "# Producto escalar\n",
+    "producto = a * b\n",
+    "print(producto) # Salida: [ 4 10 18]\n",
+    "```\n",
+    "## Funciones útiles\n",
+    "Numpy ofrece muchas funciones útiles para trabajar con arreglos:\n",
+    "```python\n",
+    "# Función para calcular la media\n",
+    "media = np.mean(arr1)\n",
+    "print(media) # Salida: 3.0\n",
+    "\n",
+    "# Función para calcular la desviación estándar\n",
+    "desviacion = np.std(arr1)\n",
+    "print(desviacion) # Salida: 1.4142135623730951\n",
+    "```\n",
+    "### Indexación y segmentación\n",
+    "Puedes acceder a elementos específicos de un arreglo utilizando índices:\n",
+    "```python\n",
+    "# Acceder al primer elemento\n",
+    "print(arr1[0]) # Salida: 1\n",
+    "# Acceder a una fila específica en un arreglo bidimensional\n",
+    "print(arr2[1]) # Salida: [4 5 6]\n",
+    "# Acceder a un elemento específico en un arreglo bidimensional\n",
+    "print(arr2[0, 1]) # Salida: 2\n",
+    "```\n",
+    "### Filtrar (indexación booleana)\n",
+    "La indexación booleana te permite filtrar elementos de un arreglo según condiciones específicas. Por ejemplo:\n",
+    "```python\n",
+    "# Filtrar elementos mayores que 2\n",
+    "filtro = arr1 > 2\n",
+    "print(filtro) # Salida: [False False  True  True  True]\n",
+    "print(arr1[filtro]) # Salida: [3 4 5]\n",
+    "```\n",
+    "\n",
+    "### Slicing\n",
+    "El slicing en Numpy te permite extraer subarreglos de un arreglo existente utilizando la notación de índices. La sintaxis básica para el slicing es `arr[inicio:fin:paso]`, donde `inicio` es el índice inicial, `fin` es el índice final (exclusivo) y `paso` es el intervalo entre los índices seleccionados. \n",
+    "\n",
+    "Por ejemplo:\n",
+    "```python\n",
+    "# Crear un arreglo\n",
+    "arr = np.array([10, 20, 30, 40, 50, 60])\n",
+    "# Extraer un subarreglo desde el índice 1 hasta el índice 4\n",
+    "subarr = arr[1:4]\n",
+    "print(subarr) # Salida: [20 30 40]\n",
+    "# Extraer elementos con un paso de 2\n",
+    "subarr_paso = arr[::2]\n",
+    "print(subarr_paso) # Salida: [10 30 50]\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "vector = np.arange(30,300)\n",
+    "print(vector[10:50:5]) # realiza un slicing desde el índice 10 hasta el 50 con un paso de 5\n",
+    "# Salida: [ 40  65  90 115 140 165 190 215]\n",
+    "```\n",
+    "\n",
+    "\n",
+    "## Tensores en Numpy\n",
+    "Los tensores son una generalización de los arreglos multidimensionales. En Numpy, los tensores se representan como arreglos con más de dos dimensiones. Puedes crear tensores de la siguiente manera:\n",
+    "```python\n",
+    "# Crear un tensor tridimensional\n",
+    "tensor = np.array([[[1, 2], [3, 4]], [[5, 6], [7, 8]]])\n",
+    "print(tensor)\n",
+    "# Salida:\n",
+    "# [[[1 2]\n",
+    "#   [3 4]]\n",
+    "#  [[5 6]\n",
+    "#   [7 8]]]\n",
+    "```\n",
+    "Puedes acceder a los elementos de un tensor utilizando índices múltiples:\n",
+    "```python\n",
+    "# Acceder a un elemento específico en el tensor\n",
+    "elemento = tensor[1, 0, 1]\n",
+    "print(elemento) # Salida: 6\n",
+    "```\n",
+    "Los tensores son útiles en diversas aplicaciones, como el aprendizaje automático y la computación científica, donde se manejan datos con múltiples dimensiones. Numpy facilita la manipulación y operación con tensores, permitiendo realizar cálculos complejos de manera eficiente.\n",
+    "```python\n",
+    "## Operación con tensores\n",
+    "tensor_a = np.array([[[1, 2], [3, 4]], [[5, 6], [7, 8]]])\n",
+    "tensor_b = np.array([[[9, 8], [7, 6]], [[5, 4], [3, 2]]])\n",
+    "suma_tensores = tensor_a + tensor_b\n",
+    "print(suma_tensores)\n",
+    "# Salida:\n",
+    "# [[[10 10]\n",
+    "#   [10 10]]\n",
+    "#  [[10 10]\n",
+    "#   [10 10]]]\n",
+    "```\n"
    ]
   }
  ],
