--- a/1.Fundamentos de Python/7.Numpy.ipynb
+++ b/1.Fundamentos de Python/7.Numpy.ipynb
@@ -5,6 +5,10 @@
    "id": "f2e5bd85-5598-4e5d-947d-881f3e6f788a",
    "metadata": {},
    "source": [
+    "<p style=\"text-align:center\">\n",
+    "<img src=\"../images/numpy-logo.png\" width=\"800\" alt=\"Numpy\"/>\n",
+    "</p>\n",
+    "\n",
     "# Numpy (Numerical Python)\n",
     "\n",
     "Numpy es una biblioteca de Python que se utiliza para realizar cálculos numéricos de manera eficiente. Proporciona estructuras de datos, como arreglos multidimensionales, y funciones para operar con ellos.\n",
@@ -19,7 +23,10 @@
     "- SciPy\n",
     "- Matplotlib\n",
     "- Scikit-learn  \n",
-    "\n",
+    "<p style=\"text-align:center\">\n",
+    "<img src=\"../images/numpy-array.png\" alt=\"Numpy arrays\"/>\n",
+    "<caption>Fuente: https://nustat.github.io/DataScience_Intro_python/NumPy.html</caption>\n",
+    "</p>\n",
     "\n",
     "## Instalación\n",
     "Para instalar Numpy, puedes usar pip. Abre tu terminal y ejecuta el siguiente comando:\n",
@@ -84,8 +91,10 @@
     "```python\n",
     "# Acceder al primer elemento\n",
     "print(arr1[0]) # Salida: 1\n",
+    "\n",
     "# Acceder a una fila específica en un arreglo bidimensional\n",
     "print(arr2[1]) # Salida: [4 5 6]\n",
+    "\n",
     "# Acceder a un elemento específico en un arreglo bidimensional\n",
     "print(arr2[0, 1]) # Salida: 2\n",
     "```\n",
@@ -98,16 +107,18 @@
     "print(arr1[filtro]) # Salida: [3 4 5]\n",
     "```\n",
     "\n",
-    "### Slicing\n",
+    "### slicing\n",
     "El slicing en Numpy te permite extraer subarreglos de un arreglo existente utilizando la notación de índices. La sintaxis básica para el slicing es `arr[inicio:fin:paso]`, donde `inicio` es el índice inicial, `fin` es el índice final (exclusivo) y `paso` es el intervalo entre los índices seleccionados. \n",
     "\n",
     "Por ejemplo:\n",
     "```python\n",
     "# Crear un arreglo\n",
     "arr = np.array([10, 20, 30, 40, 50, 60])\n",
+    "\n",
     "# Extraer un subarreglo desde el índice 1 hasta el índice 4\n",
     "subarr = arr[1:4]\n",
     "print(subarr) # Salida: [20 30 40]\n",
+    "\n",
     "# Extraer elementos con un paso de 2\n",
     "subarr_paso = arr[::2]\n",
     "print(subarr_paso) # Salida: [10 30 50]\n",
@@ -117,6 +128,173 @@
     "vector = np.arange(30,300)\n",
     "print(vector[10:50:5]) # realiza un slicing desde el índice 10 hasta el 50 con un paso de 5\n",
     "# Salida: [ 40  65  90 115 140 165 190 215]\n",
+    "```\n",
+    "### reshape\n",
+    "La función `reshape` en Numpy te permite cambiar la forma (dimensiones) de un arreglo sin cambiar sus datos. Esto es útil cuando necesitas reorganizar los datos para realizar operaciones específicas o para adaptarlos a ciertos requisitos de entrada en algoritmos. Por ejemplo:\n",
+    "```python\n",
+    "# Crear un arreglo unidimensional con 12 elementos\n",
+    "arr = np.arange(12)\n",
+    "print(\"Arreglo original:\")\n",
+    "print(arr) # Salida: [ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+    "\n",
+    "# Cambiar la forma del arreglo a una matriz de 3 filas y 4 columnas\n",
+    "matriz = arr.reshape(3, 4)\n",
+    "print(\"Arreglo después de reshape a 3x4:\")\n",
+    "print(matriz)\n",
+    "\n",
+    "# Salida:\n",
+    "# [[ 0  1  2  3]\n",
+    "#  [ 4  5  6  7]\n",
+    "#  [ 8  9 10 11]]\n",
+    "```\n",
+    "### concatenate\n",
+    "La concatenación de arreglos en Numpy se puede realizar utilizando la función `np.concatenate`. Esta función permite unir dos o más arreglos a lo largo de un eje específico. Por ejemplo:\n",
+    "```python\n",
+    "# Crear dos arreglos\n",
+    "arr1 = np.array([1, 2, 3])\n",
+    "arr2 = np.array([4, 5, 6])\n",
+    "\n",
+    "# Concatenar los arreglos\n",
+    "concatenado = np.concatenate((arr1, arr2))\n",
+    "print(concatenado) # Salida: [1 2 3 4 5 6]\n",
+    "``` \n",
+    "Como concatenar arreglos multidimensionales:\n",
+    "```python\n",
+    "# Crear dos arreglos bidimensionales\n",
+    "arr3 = np.array([[1, 2], [3, 4]])\n",
+    "arr4 = np.array([[5, 6], [7, 8]])\n",
+    "\n",
+    "# Concatenar los arreglos a lo largo de las filas\n",
+    "concatenado_2d = np.concatenate((arr3, arr4), axis=0) \n",
+    "# axis=0 para concatenar filas, axis=1 para concatenar columnas\n",
+    "\n",
+    "print(concatenado_2d)\n",
+    "# Salida:\n",
+    "# [[1 2]\n",
+    "#  [3 4]\n",
+    "#  [5 6]\n",
+    "#  [7 8]]\n",
+    "\n",
+    "# Concatenar a lo largo de las columnas\n",
+    "concatenado_2d = np.concatenate((arr3, arr4), axis=1)\n",
+    "print(concatenado_2d)\n",
+    "# Salida:\n",
+    "# [[1 2 5 6]\n",
+    "#  [3 4 7 8]]\n",
+    " \n",
+    "```\n",
+    "### array_split\n",
+    "La función `np.array_split` en Numpy se utiliza para dividir un arreglo en múltiples subarreglos a lo largo de un eje especificado. A diferencia de `np.split`, que requiere que el arreglo se divida en partes iguales, `np.array_split` permite dividir el arreglo en partes desiguales si es necesario. Esto es útil cuando no sabes de antemano cuántas partes iguales puedes obtener. Por ejemplo:\n",
+    "```python\n",
+    "# Crear un arreglo\n",
+    "arr = np.arange(10)\n",
+    "print(\"Arreglo original:\")\n",
+    "print(arr) # Salida: [0 1 2 3 4 5 6 7 8 9]  \n",
+    "\n",
+    "# Dividir el arreglo en 3 partes\n",
+    "subarreglos = np.array_split(arr, 3)\n",
+    "print(\"Subarreglos después de array_split:\")\n",
+    "for subarr in subarreglos:\n",
+    "    print(subarr)\n",
+    "\n",
+    "# Salida:\n",
+    "# [0 1 2 3]\n",
+    "# [4 5 6]\n",
+    "# [7 8 9]\n",
+    "```\n",
+    "### where\n",
+    "La función `np.where` en Numpy se utiliza para devolver los índices de los elementos que cumplen una condición específica. Es especialmente útil para filtrar datos o para realizar operaciones condicionales en arreglos. La sintaxis básica es `np.where(condición, valor_si_verdadero, valor_si_falso)`. Por ejemplo:\n",
+    "```python\n",
+    "# Crear un arreglo\n",
+    "arr = np.array([10, 15, 20, 25, 30])\n",
+    "\n",
+    "# Usar np.where para encontrar elementos mayores que 20\n",
+    "resultado = np.where(arr > 20, \"Mayor\", \"Menor o igual\")\n",
+    "print(resultado)\n",
+    "# Salida: ['Menor o igual' 'Menor o igual' 'Menor o igual' 'Mayor' 'Mayor']\n",
+    "\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "# Usar np.where para encontrar índices de elementos pares\n",
+    "indices_pares = np.where(arr % 2 == 0)\n",
+    "print(indices_pares) # Salida: (array([1, 3, 5, 7, 9]),)\n",
+    "\n",
+    "# Usar np.where para encontrar valores = a 10\n",
+    "valores_diez = np.where(arr == 10)\n",
+    "print(valores_diez) # Salida: (array([9]),)\n",
+    "\n",
+    "```\n",
+    "### sort\n",
+    "La función `np.sort` en Numpy se utiliza para ordenar los elementos de un arreglo a lo largo de un eje especificado. Por defecto, ordena los elementos en orden ascendente. Por ejemplo:\n",
+    "```python\n",
+    "# Crear un arreglo desordenado\n",
+    "arr = np.array([5, 2, 9, 1, 5, 6])\n",
+    "print(\"Arreglo original:\")\n",
+    "print(arr) # Salida: [5 2 9 1 5 6]\n",
+    "\n",
+    "# Usar np.sort para ordenar el arreglo\n",
+    "arreglo_ordenado = np.sort(arr)\n",
+    "print(\"Arreglo ordenado:\")\n",
+    "print(arreglo_ordenado) # Salida: [1 2 5 5 6 9]\n",
+    "```\n",
+    "### arange\n",
+    "La función `np.arange` en Numpy se utiliza para crear arreglos con un rango de valores. Es similar a la función `range` de Python, pero devuelve un arreglo de Numpy. Por ejemplo:\n",
+    "```python\n",
+    "# Crear un arreglo con valores del 0 al 9\n",
+    "arreglo_rango = np.arange(10)\n",
+    "print(\"Arreglo con np.arange:\")\n",
+    "print(arreglo_rango) # Salida: [0 1 2 3 4 5 6 7 8 9]\n",
+    "```\n",
+    "### linspace\n",
+    "La función `np.linspace` en Numpy se utiliza para crear arreglos con un número específico de valores igualmente espaciados entre un valor inicial y un valor final. A diferencia de `np.arange`, que utiliza un paso fijo, `np.linspace` se centra en el número de puntos que deseas generar. Por ejemplo:\n",
+    "```python\n",
+    "# Crear un arreglo con 5 valores igualmente espaciados entre 0 y 1\n",
+    "arreglo_linspace = np.linspace(0, 1, 5)\n",
+    "print(\"Arreglo con np.linspace:\")\n",
+    "print(arreglo_linspace) # Salida: [0.   0.25 0.5  0.75 1.  ]\n",
+    "```\n",
+    "### min y max\n",
+    "Las funciones `np.min` y `np.max` en Numpy se utilizan para encontrar el valor mínimo y máximo en un arreglo, respectivamente. Estas funciones pueden operar en todo el arreglo o a lo largo de un eje específico. Por ejemplo:\n",
+    "```python\n",
+    "# Crear un arreglo\n",
+    "arr = np.array([3, 1, 4, 1, 5, 9, 2, 6, 5])\n",
+    "\n",
+    "# Encontrar el valor mínimo por columnas\n",
+    "minimo = np.min(arr)\n",
+    "print(\"Valor mínimo:\", minimo) # Salida: 1\n",
+    "\n",
+    "# Encontrar el valor máximo\n",
+    "maximo = np.max(arr)\n",
+    "print(\"Valor máximo:\", maximo) # Salida: 9\n",
+    "\n",
+    "# en array bidimensional\n",
+    "arr2d = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "minimo_filas = np.min(arr2d, axis=1)\n",
+    "print(\"Valor mínimo por filas:\", minimo_filas) # Salida: [1 4 7]\n",
+    "maximo_columnas = np.max(arr2d, axis=0)\n",
+    "print(\"Valor máximo por columnas:\", maximo_columnas) # Salida: [7 8 9]\n",
+    "```\n",
+    "\n",
+    "### transpose\n",
+    "La función `np.transpose` en Numpy se utiliza para cambiar la orientación de un arreglo multidimensional, es decir, intercambiar sus ejes. Esto es especialmente útil cuando trabajas con matrices y necesitas cambiar filas por columnas o viceversa. Por ejemplo:\n",
+    "```python\n",
+    "# Crear una matriz bidimensional\n",
+    "matriz = np.array([[1, 2, 3],\n",
+    "                   [4, 5, 6],\n",
+    "                   [7, 8, 9]])\n",
+    "print(\"Matriz original:\")\n",
+    "print(matriz)\n",
+    "# Salida:# [[1 2 3]\n",
+    "#  [4 5 6]\n",
+    "#  [7 8 9]] \n",
+    "\n",
+    "# Transponer la matriz\n",
+    "matriz_transpuesta = np.transpose(matriz)\n",
+    "print(\"Matriz transpuesta:\")\n",
+    "print(matriz_transpuesta)\n",
+    "# Salida:\n",
+    "# [[1 4 7]\n",
+    "#  [2 5 8]\n",
+    "#  [3 6 9]]\n",
     "```\n",
     "\n",
     "\n",
