--- a/1.Fundamentos de Python/7.Numpy.ipynb
+++ b/1.Fundamentos de Python/7.Numpy.ipynb
@@ -181,8 +181,52 @@
     "# Salida:\n",
     "# [[1 2 5 6]\n",
     "#  [3 4 7 8]]\n",
-    " \n",
+    "````\n",
+    "\n",
+    "### choice\n",
+    "La función `np.random.choice` en Numpy se utiliza para seleccionar elementos aleatorios de un arreglo dado. Puedes especificar el número de elementos a seleccionar, si la selección debe ser con o sin reemplazo, y las probabilidades asociadas a cada elemento. Por ejemplo:\n",
+    "```python\n",
+    "# Crear un arreglo\n",
+    "arr = np.array([10, 20, 30, 40, 50])   \n",
+    "\n",
+    "# Seleccionar 3 elementos aleatorios sin reemplazo\n",
+    "seleccion = np.random.choice(arr, size=3, replace=False)\n",
+    "print(\"Elementos seleccionados aleatoriamente sin reemplazo:\")\n",
+    "print(seleccion)\n",
+    "\n",
+    "# Salida: Puede variar, por ejemplo: [30 10 50]\n",
+    "# Seleccionar 3 elementos aleatorios con reemplazo\n",
+    "seleccion_con_reemplazo = np.random.choice(arr, size=3, replace=True)\n",
+    "print(\"Elementos seleccionados aleatoriamente con reemplazo:\")\n",
+    "print(seleccion_con_reemplazo)\n",
+    "\n",
+    "# Salida: Puede variar, por ejemplo: [20 40 20]\n",
     "```\n",
+    "# crear un arreglo con probabilidades específicas\n",
+    "```python \n",
+    "# Crear un arreglo\n",
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "\n",
+    "# Definir probabilidades para cada elemento\n",
+    "probabilidades = [0.1, 0.2, 0.3, 0.2, 0.2]\n",
+    "\n",
+    "# Seleccionar 5 elementos aleatorios con las probabilidades definidas\n",
+    "seleccion_prob = np.random.choice(arr, size=5, p=probabilidades)\n",
+    "print(\"Elementos seleccionados aleatoriamente con probabilidades específicas:\")\n",
+    "print(seleccion_prob)\n",
+    "# Salida: Puede variar, por ejemplo: [3 2 5 3 1]\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "# Crear un arreglo random de 0 a 99 sin repetir los valores\n",
+    "arr = np.arange(100)\n",
+    "# Seleccionar 10 elementos aleatorios sin reemplazo\n",
+    "seleccion_unica = np.random.choice(arr, size=10, replace=False)\n",
+    "print(\"Elementos seleccionados aleatoriamente sin repetir valores:\")\n",
+    "print(seleccion_unica)\n",
+    "# Salida: Puede variar, por ejemplo: [23 45 67 12 89 34 56 78 90 11]\n",
+    "```\n",
+    "\n",
     "### array_split\n",
     "La función `np.array_split` en Numpy se utiliza para dividir un arreglo en múltiples subarreglos a lo largo de un eje especificado. A diferencia de `np.split`, que requiere que el arreglo se divida en partes iguales, `np.array_split` permite dividir el arreglo en partes desiguales si es necesario. Esto es útil cuando no sabes de antemano cuántas partes iguales puedes obtener. Por ejemplo:\n",
     "```python\n",
