--- a/1.Fundamentos de Python/8.Pandas.ipynb
+++ b/1.Fundamentos de Python/8.Pandas.ipynb
@@ -16,6 +16,10 @@
         "id": "c4fldNzQ54eR"
       },
       "source": [
+        "<p style=\"text-align:center\">\n",
+        "<img src=\"../images/pandas-logo.png\" width=\"800\" alt=\"Pandas\"/>\n",
+        "</p>\n",
+        "\n",
         "# PANDAS\n",
         "## Librería de manipulación de datos\n",
         "\n",
