--- a/5.Visualizacion/Matplotlib.ipynb
+++ b/5.Visualizacion/Matplotlib.ipynb
@@ -5,6 +5,10 @@
    "id": "d4f37b54",
    "metadata": {},
    "source": [
+    "<p style=\"text-align:center\">\n",
+    "<img src=\"../images/matplotlib.png\" width=\"550\" alt=\"Matplotlib\"/>\n",
+    "</p>\n",
+    "\n",
     "# 📊 Matplotlib\n",
     "**Objetivo del módulo:** Aprender a comunicar hallazgos mediante gráficos eficaces con Matplotlib.\n",
     "\n",
@@ -171,7 +175,6 @@
    "source": [
     "# creación de un gráfico con matplotlib\n",
     "# crear una figura y un eje\n",
-    "\n",
     "plt.plot(years, nivel1, label='Nivel 1')\n",
     "plt.plot(years, nivel2, label='Nivel 2')\n",
     "plt.plot(years, nivel3, label='Nivel 3')\n",
@@ -179,37 +182,30 @@
     "plt.plot(years, nivel5, label='Nivel 5')\n",
     "\n",
     "# añadir una leyenda\n",
-    "\n",
     "plt.legend()\n",
     "\n",
     "# establecer el tipo de letra para todo el grafico\n",
-    "\n",
     "plt.rcParams['font.family'] = 'Times New Roman'\n",
     "\n",
     "# añadir etiquetas y título\n",
-    "\n",
     "plt.xlabel('Años de examen')\n",
     "plt.ylabel('Puntajes')\n",
     "plt.title('Puntajes a lo largo de los años', fontsize=16)\n",
     "\n",
     "# personalizar eje y respecto de los puntajes de 0 a 500 en incrementos de 50\n",
-    "\n",
     "plt.yticks(np.arange(0, 901, 50))\n",
     "\n",
     "# activar cuadricula\n",
     "plt.grid()\n",
     "\n",
     "# activar marcas menores solo en el eje y\n",
-    "\n",
     "plt.minorticks_on()\n",
     "plt.grid(which='minor', axis='y', linestyle=':', linewidth=0.5)\n",
     "\n",
     "#establecer un tamaño de figura en pulgadas\n",
-    "\n",
     "plt.gcf().set_size_inches(12, 7)\n",
     "\n",
     "# no mostrar ticks menores, solo mayores en el eje x en los años\n",
-    "\n",
     "plt.tick_params(axis='x', which='minor', bottom=False, top=False)\n",
     "\n",
     "# mostrar el gráfico\n",
@@ -245,7 +241,6 @@
    ],
    "source": [
     "# establecer colores y marcas para cada línea, esto sobreescribe los colores por defecto.\n",
-    "\n",
     "plt.plot(years, nivel1, label='Nivel 1', color='blue', marker='o')\n",
     "plt.plot(years, nivel2, label='Nivel 2', color='orange', marker='s')\n",
     "plt.plot(years, nivel3, label='Nivel 3', color='green', marker='^')\n",
@@ -256,34 +251,27 @@
     "plt.legend()\n",
     "\n",
     "# añadir etiquetas y título\n",
-    "\n",
     "plt.xlabel('Años de examen')\n",
     "plt.ylabel('Puntajes')\n",
     "plt.title('Puntajes a lo largo de los años')\n",
     "\n",
     "# personalizar eje de puntaje de 0 a 500 en incrementos de 50\n",
-    "\n",
     "plt.yticks(np.arange(0, 901, 50))\n",
     "\n",
     "# activar cuadricula\n",
-    "\n",
     "plt.grid()\n",
     "\n",
     "# activar marcas menores solo en el eje y\n",
-    "\n",
     "plt.minorticks_on()\n",
     "plt.grid(which='minor', axis='y', linestyle=':', linewidth=0.5)\n",
     "\n",
     "# establecer un tamaño de figura en pulgadas\n",
-    "\n",
     "plt.gcf().set_size_inches(12, 7)\n",
     "\n",
     "# no mostrar ticks menores, solo mayores en el eje x en los años\n",
-    "\n",
     "plt.tick_params(axis='x', which='minor', bottom=False, top=False)\n",
     "\n",
     "# mostrar el gráfico\n",
-    "\n",
     "plt.show()"
    ]
   },
@@ -314,15 +302,12 @@
     "plt.plot(years, nivel5, label='Nivel 5', color='purple', marker='x', linestyle='-')\n",
     "\n",
     "# añadir una leyenda   \n",
-    "\n",
     "plt.legend()\n",
     "\n",
     "# establecer un tamaño de figura en pulgadas\n",
-    "\n",
     "plt.gcf().set_size_inches(12, 7)\n",
     "\n",
     "# mostrar el gráfico\n",
-    "\n",
     "plt.show()"
    ]
   },
